# inku-lang

./: .gitignore  LICENSE  README.ja.md  README.md  SPEC.md
server/: .env.example  pyproject.toml
server/src/inku_server/: __init__.py  api.py  coerce.py  composer.py  db.py  expansion.py  interpreter.py  migrate_history.py  renderer.py  schema.py  snapshots.py  trainer.py
server/tests/: test_api.py  test_composer.py  test_interpreter.py  test_renderer.py
server/tests/fixtures/stage2/01/: expected.json  input.txt
server/tests/fixtures/stage2/02/: expected.json  input.txt
server/tests/fixtures/stage2/03/: expected.json  input.txt
server/tests/fixtures/stage2/04/: expected.json  input.txt
server/tests/fixtures/stage2/05/: expected.json  input.txt
server/tests/fixtures/stage2/06/: expected.json  input.txt
server/tests/fixtures/stage2/07/: expected.json  input.txt
server/tests/fixtures/stage2/08/: expected.json  input.txt
server/tests/fixtures/stage2/09/: expected.json  input.txt
server/tests/fixtures/stage2/10/: expected.json  input.txt
server/tests/fixtures/stage2/11/: expected.json  input.txt
server/tests/fixtures/stage2/12/: expected.json  input.txt
server/tests/fixtures/stage2/13/: expected.json  input.txt
server/tests/fixtures/stage2/14/: expected.json  input.txt
server/tests/fixtures/stage2/15/: expected.json  input.txt
web/: .gitignore  package-lock.json  package.json  vite.config.ts
web/src/: app.html
web/src/lib/: highlight.ts  models.ts  saijiki.ts
web/src/lib/i18n/: en.ts  index.svelte.ts  (+2 more)
web/src/routes/: +page.svelte
